--- a/static/style.css
+++ b/static/style.css
@@ -95,3 +95,20 @@ pre {
     border-radius: var(--border-radius);
     margin-top: 1rem;
 }
+
+.title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+
+h1 {
+    margin: 0;
+    margin-left: 0.5rem;
+}
+
+img {
+    width: 50px;
+    margin-left: -8px;
+}
